fixed info h1 spacing

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ header{
 }
 
 .info_container{
-    margin-top: 100px;
+    margin-top: 25px;
     display: flex;
     justify-content: center;
 }
